--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Le Gourmet - Restaurant Gastronomique</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ultra&family=WDXL+Lubrifont+TC&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ancizar+Serif:ital,wght@0,300..900;1,300..900&family=Ultra&family=WDXL+Lubrifont+TC&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -26,18 +32,18 @@
 
     <section id="accueil" class="hero">
         <div class="hero-content">
-            <h1>Le Gourmet</h1>
-            <p>Une expérience culinaire exceptionnelle</p>
+            <h1 class="ultra-regular">Le Gourmet</h1>
+            <p class="ancizar-serif">Une expérience culinaire exceptionnelle</p>
             <a href="#menu" class="btn">Découvrir notre menu</a>
         </div>
     </section>
 
     <section id="about" class="about fade-in">
-        <h2>À propos de nous</h2>
+        <h2 class="ultra-regular">À propos de nous</h2>
         <div class="about-content">
-            <div class="about-text">
-                <p>Depuis plus de 20 ans, Le Gourmet vous accueille dans un cadre raffiné pour vous faire découvrir une cuisine authentique et créative. Notre chef étoilé met un point d'honneur à sélectionner les meilleurs produits locaux pour vous offrir une expérience gastronomique inoubliable.</p>
-                <p>Chaque plat est une œuvre d'art, pensée et réalisée avec passion. Nous croyons que la gastronomie est un art qui se partage, et c'est avec plaisir que nous vous invitons à vivre cette expérience unique.</p>
+            <div class="about-text" style="text-align: justify;">
+                <p class="ancizar-serif">Depuis plus de 20 ans, Le Gourmet vous accueille dans un cadre raffiné pour vous faire découvrir une cuisine authentique et créative. Notre chef étoilé met un point d'honneur à sélectionner les meilleurs produits locaux pour vous offrir une expérience gastronomique inoubliable.</p>
+                <p class="ancizar-serif">Chaque plat est une œuvre d'art, pensée et réalisée avec passion. Nous croyons que la gastronomie est un art qui se partage, et c'est avec plaisir que nous vous invitons à vivre cette expérience unique.</p>
             </div>
             <div class="about-image">
                 <span>Notre Chef Étoilé</span>
@@ -45,10 +51,10 @@
         </div>
     </section>
 
-    <section id="menu" class="fade-in">
-        <h2>Notre Menu</h2>
+    <section id="menu" class="fade-in" >
+        <h2 class="ultra-regular">Notre Menu</h2>
         <div class="menu-grid">
-            <div class="menu-item">
+            <div class="menu-item ancizar-serif">
                 <h3>Entrées</h3>
                 <p>Foie gras poêlé aux figues</p>
                 <span class="price">24€</span>
@@ -87,34 +93,30 @@
     </section>
 
     <section id="contact" class="contact fade-in">
-        <h2>Nous Contacter</h2>
+        <h2 class="ultra-regular">Nous Contacter</h2>
         <div class="contact-content">
             <div class="contact-info">
                 <div>
                     <div class="icon">📍</div>
                     <div>
-                        <h3>Adresse</h3>
                         <p>123 Rue de la Gastronomie<br>75001 Paris, France</p>
                     </div>
                 </div>
                 <div>
                     <div class="icon">📞</div>
                     <div>
-                        <h3>Téléphone</h3>
                         <p>01 23 45 67 89</p>
                     </div>
                 </div>
                 <div>
                     <div class="icon">✉️</div>
                     <div>
-                        <h3>Email</h3>
                         <p>contact@legourmet.fr</p>
                     </div>
                 </div>
                 <div>
                     <div class="icon">🕒</div>
                     <div>
-                        <h3>Horaires</h3>
                         <p>Mar-Sam: 19h-23h<br>Fermé Dim-Lun</p>
                     </div>
                 </div>
@@ -131,7 +133,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Le Gourmet. Tous droits réservés. | Réalisé avec passion</p>
+        <p class="ancizar-serif">&copy; 2024 Le Gourmet. Tous droits réservés. | Réalisé avec passion</p>
     </footer>
 
     <script src="script.js" ></script>
